--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,11 +2,11 @@
   "dependencies": {
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
-    "com.unity.ide.vscode": "1.2.1",
-    "com.unity.render-pipelines.core": "file:E:/WJX/SRP/Package/com.unity.render-pipelines.core@7.3.1",
-    "com.unity.render-pipelines.universal": "file:E:/WJX/SRP/Package/com.unity.render-pipelines.universal@7.3.1",
-    "com.unity.shadergraph": "file:E:/WJX/SRP/Package/com.unity.shadergraph@7.3.1",
-    "com.unity.test-framework": "1.1.16",
+    "com.unity.ide.vscode": "1.2.3",
+    "com.unity.render-pipelines.core": "file:G:/WJX/SRP/Package/com.unity.render-pipelines.core@7.3.1",
+    "com.unity.render-pipelines.universal": "file:G:/WJX/SRP/Package/com.unity.render-pipelines.universal@7.3.1",
+    "com.unity.shadergraph": "file:G:/WJX/SRP/Package/com.unity.shadergraph@7.3.1",
+    "com.unity.test-framework": "1.1.20",
     "com.unity.textmeshpro": "2.1.1",
     "com.unity.timeline": "1.2.15",
     "com.unity.ugui": "1.0.0",
